--- a/proj_duanyou/src/main/res/layout/fragment_mine.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_mine.xml
@@ -39,6 +39,7 @@
                 android:textColor="@color/white" />
 
             <TextView
+                android:id="@+id/location_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@+id/tv_name"
@@ -99,15 +100,55 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:gravity="center_vertical"
-            android:drawablePadding="10dp"
-            android:paddingLeft="5dp"
-            android:paddingEnd="10dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
             android:background="@color/white"
             android:drawableLeft="@drawable/collection2x"
+            android:drawablePadding="10dp"
             android:drawableRight="@drawable/jiatou2x"
+            android:gravity="center_vertical"
+            android:paddingEnd="10dp"
+            android:paddingLeft="5dp"
             android:text="收藏" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+
+            android:background="@color/white"
+            android:drawableLeft="@drawable/write2x"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/jiatou2x"
+            android:gravity="center_vertical"
+            android:paddingEnd="10dp"
+            android:paddingLeft="5dp"
+            android:text="投稿" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+
+            android:background="@color/white"
+            android:drawableLeft="@drawable/hudong2x"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/jiatou2x"
+            android:gravity="center_vertical"
+            android:paddingEnd="10dp"
+            android:paddingLeft="5dp"
+            android:text="互动" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:drawableLeft="@drawable/set2x"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/jiatou2x"
+            android:gravity="center_vertical"
+            android:paddingEnd="10dp"
+            android:paddingLeft="5dp"
+            android:text="设置" />
 
 
     </LinearLayout>
