--- a/proj_duanyou/src/main/res/layout/activity_login.xml
+++ b/proj_duanyou/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="没有账号？" />
+            android:text="密码忘了？" />
 
         <TextView
             android:id="@+id/no_account_tv"
