--- a/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
+++ b/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
@@ -10,11 +10,12 @@
         android:id="@+id/title"
         layout="@layout/common_title" />
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/title">
 
+        <!--头像姓名-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,11 +27,12 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
+                <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/head_iv"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    tools:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/default_pic"
+                    app:riv_corner_radius="6dp" />
 
                 <TextView
                     android:id="@+id/name_tv"
@@ -42,13 +44,27 @@
 
             </LinearLayout>
 
-            <cn.jzvd.JZVideoPlayerStandard
-                android:id="@+id/videoplayer"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="280dp">
+                android:layout_height="wrap_content">
 
-            </cn.jzvd.JZVideoPlayerStandard>
+                <cn.jzvd.JZVideoPlayerStandard
+                    android:id="@+id/videoplayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="280dp" />
 
+                <TextView
+                    android:id="@+id/content_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/content_iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
+            <!--操作栏-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,12 +82,13 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/zan_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/icon_liked" />
 
                     <TextView
-                        android:id="@+id/tv_liked"
+                        android:id="@+id/zan_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -88,12 +105,13 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/cai_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/icon_unliked" />
 
                     <TextView
-                        android:id="@+id/tv_unliked"
+                        android:id="@+id/cai_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -111,12 +129,13 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/comment_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/icon_comments" />
 
                     <TextView
-                        android:id="@+id/tv_comments"
+                        android:id="@+id/comment_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -126,6 +145,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/share_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -133,15 +153,43 @@
                     android:src="@drawable/icon_share" />
 
             </LinearLayout>
+
             <!--评论-->
 
-        </LinearLayout>
-    </ScrollView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="最新评论"
+                android:textSize="14sp" />
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/comment_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <ImageView
+                    android:id="@+id/empty_iv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="20dp"
+                    android:src="@drawable/empty_comment"
+                    android:visibility="gone" />
+            </FrameLayout>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <!--底部输入框-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="5dp">
@@ -151,14 +199,14 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:background="#F0F0F0" />
+            android:background="@drawable/gray_5dp_bg" />
 
         <Button
             android:id="@+id/send_btn"
             android:layout_width="70dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/green_5dp_bg"
             android:text="发送"
             android:textColor="@color/white" />
 
