--- a/proj_duanyou/src/main/res/layout/activity_login.xml
+++ b/proj_duanyou/src/main/res/layout/activity_login.xml
@@ -14,15 +14,16 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="150dp"
             android:background="@color/gray" />
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/beforesignin2x" />
+            app:riv_corner_radius="6dp"
+            android:src="@drawable/head42x" />
     </RelativeLayout>
 
     <TextView
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
+        android:textColor="@color/login_color1"
         android:text="请先登录，亲~~" />
 
     <EditText
@@ -41,6 +43,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
+        android:textColorHint="@color/login_color2"
         android:hint="这里输入段友号或手机号噢！~ ~"
         android:textSize="14sp" />
 
@@ -55,6 +58,7 @@
         android:gravity="center"
         android:inputType="textPassword"
         android:hint="密码在这里哈！~ ~"
+        android:textColorHint="@color/login_color2"
         android:textSize="14sp" />
 
     <Button
@@ -98,22 +102,23 @@
         android:layout_marginTop="20dp">
 
         <ImageView
-            android:id="@+id/iv1"
+            android:id="@+id/qq_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/qq2" />
 
         <TextView
+            
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/iv1"
-            android:layout_alignRight="@+id/iv1"
+            android:layout_alignLeft="@+id/qq_iv"
+            android:layout_alignRight="@+id/qq_iv"
             android:gravity="center"
-            android:layout_below="@+id/iv1"
+            android:layout_below="@+id/qq_iv"
             android:text="QQ登录" />
         <ImageView
-            android:id="@+id/iv2"
+            android:id="@+id/weixin_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -123,10 +128,10 @@
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/iv2"
-            android:layout_alignRight="@+id/iv2"
+            android:layout_alignLeft="@+id/weixin_iv"
+            android:layout_alignRight="@+id/weixin_iv"
             android:gravity="center"
-            android:layout_below="@+id/iv2"
+            android:layout_below="@+id/weixin_iv"
             android:text="微信登录" />
 
     </RelativeLayout>
