--- a/proj_duanyou/src/main/res/layout/activity_register.xml
+++ b/proj_duanyou/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:hint="手机号码"
-        android:textColor="@color/bg_color"
+        android:inputType="numberDecimal"
         android:textColorHint="@color/bg_color"
         android:textSize="14sp" />
 
@@ -46,7 +46,7 @@
         android:orientation="horizontal">
 
         <TextView
-
+            android:id="@+id/back_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="上一步？"
