--- a/proj_duanyou/src/main/res/layout/fragment_mine.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_mine.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,31 +12,36 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="230dp">
+            android:layout_height="290dp">
 
             <ImageView
+                android:id="@+id/bg_iv"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="230dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/background2x" />
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/headimage_iv"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_alignParentBottom="true"
-                android:layout_margin="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="20dp"
+                app:riv_corner_radius="6dp"
                 android:scaleType="centerCrop"
 
-                android:src="@drawable/beforesignin2x" />
+                android:src="@drawable/head42x" />
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/headimage_iv"
+                android:layout_alignBottom="@+id/bg_iv"
+                android:layout_marginBottom="10dp"
                 android:layout_toRightOf="@+id/headimage_iv"
                 android:text="我的窝"
+                android:layout_marginLeft="10dp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -43,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@+id/tv_name"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/headimage_iv"
                 android:drawableLeft="@drawable/near2x"
                 android:gravity="center_vertical"
@@ -108,7 +115,7 @@
             android:drawableRight="@drawable/jiatou2x"
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
             android:text="收藏" />
 
         <TextView
@@ -121,7 +128,7 @@
             android:drawableRight="@drawable/jiatou2x"
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
             android:text="投稿" />
 
         <TextView
@@ -134,7 +141,7 @@
             android:drawableRight="@drawable/jiatou2x"
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
             android:text="互动" />
 
         <TextView
@@ -147,7 +154,7 @@
             android:drawableRight="@drawable/jiatou2x"
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
             android:text="设置" />
 
 
