--- a/proj_duanyou/src/main/res/layout/fragment_mine.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_mine.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,6 +13,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="290dp">
+
 
             <ImageView
                 android:id="@+id/bg_iv"
@@ -26,12 +27,12 @@
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
-                app:riv_corner_radius="6dp"
+                android:layout_marginLeft="20dp"
                 android:scaleType="centerCrop"
+                android:src="@drawable/head42x"
 
-                android:src="@drawable/head42x" />
+                app:riv_corner_radius="6dp" />
 
             <TextView
                 android:id="@+id/tv_name"
@@ -39,9 +40,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/bg_iv"
                 android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/headimage_iv"
                 android:text="我的窝"
-                android:layout_marginLeft="10dp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -49,15 +50,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@+id/tv_name"
-                android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/headimage_iv"
                 android:drawableLeft="@drawable/near2x"
                 android:gravity="center_vertical"
                 android:text="火星上"
                 android:textColor="@color/black" />
 
-
+            <TextView
+                android:id="@+id/edit_tv"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:text="编辑"
+                android:textSize="13sp"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="14dp"
+                android:background="@drawable/rectangle_edit"
+                android:textColor="@color/white" />
         </RelativeLayout>
 
         <TextView
