--- a/proj_duanyou/src/main/res/layout/common_title.xml
+++ b/proj_duanyou/src/main/res/layout/common_title.xml
@@ -7,6 +7,11 @@
     android:background="@color/title"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_fill_status_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp">
