--- a/proj_duanyou/src/main/res/layout/fragment_main.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,11 @@
         android:background="@color/title"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_fill_status_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp">
@@ -28,7 +33,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="15dp"
-                    tools:src="@drawable/black_back" />
+                    android:src="@drawable/black_back" />
 
             </RelativeLayout>
 
